...
    <string name="activity_authenticate_create_new_account"><![CDATA[<font color="#5a6775">Noch keinen Account?</font> <b><font color="#ffffff">Benutzerkonto erstellen</font></b>]]></string>
    <string name="activity_authenticate_back_to_login"><![CDATA[<font color="#5a6775">Zurück zum</font> <b><font color="#ffffff">Login</font></b>]]></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="action_sign_in_short">Benutzerkonto anlegen</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
...

    <string name="map_fab_no_gps">Es konnten keine Positionsdaten im Zeitrahmen von 10 Sekunden empfangen werden.</string>

    <string name="map_frag_invalid_vertex">Punkt ungültig.</string>

    <string name="map_frag_botsheet_dialog_default_header">"Bitte eingeben …"</string>
    <string name="map_frag_botsheet_dialog_positive">OK</string>
    <string name="map_frag_botsheet_dialog_negative">Abbrechen</string>

    <string name="map_frag_bottomsheet_inp_dialog_dc_title_header">Bezeichnung des Schadenfalls</string>
    <string name="map_frag_bottomsheet_inp_dialog_dc_title_hint">Bezeichnung</string>

    <string name="map_frag_bottomsheet_inp_dialog_contract_policyholder_header">Name des Versicherungsnehmers</string>
...
